otp and home  screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   get_storage: ^2.1.1
   flutter_svg: ^2.1.0
   convex_bottom_bar: ^3.2.0
+  fl_chart: ^0.71.0
+  percent_indicator: ^4.2.5
 
 dev_dependencies:
   flutter_test:
