--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   convex_bottom_bar: ^3.2.0
   fl_chart: ^0.71.0
   percent_indicator: ^4.2.5
+  flutter_map: ^7.0.2
+  latlong2: ^0.9.1
 
 dev_dependencies:
   flutter_test:
