make some screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   percent_indicator: ^4.2.5
   flutter_map: ^7.0.2
   latlong2: ^0.9.1
+  pie_chart: ^5.4.0
 
 dev_dependencies:
   flutter_test:
